# Time-Series-Databse-Engine

./: .dockerignore  Dockerfile  README.md  benchmark.py  gitignore.
api/: main.py
engine/: CMakeLists.txt  insight.cpp  shard.cpp  shard.h  test_engine.cpp
tests/: test_api.py
